<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_EnOcean" Id="{bec68ff9-8f1d-4ce1-b8b9-84de691aacc9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
//Atrium
	strEnOceanSwitch_AtriumNiveau_PladeB				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_Service				: Tc2_EnOcean.STR_EnOceanSwitch;


//Gange
//	strEnOceanSwitch_Gang_3_364				: Tc2_EnOcean.STR_EnOceanSwitch;

	//Rum
	strEnOceanSwitch_Rum_5_125_Indgang          		: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_125_Ekstra          		: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_127          					: Tc2_EnOcean.STR_EnOceanSwitch;

	strEnOceanSwitch_Gang_5_149_indgang1				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Gang_5_149_indgang2				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Gang_5_149A_indgang1			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Gang_5_149A_indgang2			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_145A_indgang_1			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_145A_indgang_2			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_145A_Depot				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Gang_5_141A    			     		: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_111B    				        : Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Gang_5_153A   			         	: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Gang_5_153D    			     		: Tc2_EnOcean.STR_EnOceanSwitch;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>